# fastapi-demo

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/v1/: user.py
app/core/: config.py  logging.py
app/db/: schema.py
app/models/: user.py
app/services/: user_service.py
app/web/: root.py
tests/: test_db.py
tests/api/v1/: test_user.py
